[gd_scene load_steps=5 format=3 uid="uid://c6gfiwux5iujg"]

[ext_resource type="Script" uid="uid://cueap7unt820g" path="res://scenes/apps/taskbar_app.gd" id="1_l16k6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ivnc"]
size = Vector2(40, 40)

[sub_resource type="Gradient" id="Gradient_4e5aq"]
colors = PackedColorArray(0, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1ivnc"]
gradient = SubResource("Gradient_4e5aq")
width = 40
height = 40

[node name="TaskbarApp" type="Area2D"]
script = ExtResource("1_l16k6")

[node name="Icon" type="Sprite2D" parent="."]
rotation = 3.14159

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_1ivnc")

[node name="ActiveIndicator" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.27451)
position = Vector2(0, 20)
rotation = -1.5708
scale = Vector2(0.1, 0.2)
texture = SubResource("GradientTexture2D_1ivnc")
centered = false
offset = Vector2(0, -20)

[connection signal="input_event" from="." to="." method="_on_input_event"]
